# CodeDesignAssessment

Assessment/CDDS_Optimise/: main.cpp
Assessment/CodeDesign/: Assessment Task 1.docx
Assessment/CodeDesign/Project1/: Critter.cpp  Critter.h  Game.cpp  Game.h  Project1.vcxproj  Project1.vcxproj.filters  Resource.h  ResourceManager.cpp  ResourceManager.h  main.cpp
Assessment/Delete this lmao/: Delete this lmao.sln
Assessment/Delete this lmao/Delete this lmao/: Delete this lmao.vcxproj  Source.cpp
Assessment/Raylib Resource manager/: CharacterActor.h  DisplayOverlay.h  InputHandler.h  License.txt  Main.cpp  PhysicsObject.cpp  PhysicsObject.h  Raylib Resource manager.sln  Raylib Resource manager.vcxproj  Scarfy.cpp  TextureAtlas.cpp  TileMap2DLoader.cpp  TrackingCamera2D.h
Assessment/Raylib Resource manager/Raylib Resource manager/: CommandListener.h  Raylib Resource manager.vcxproj.filters  ScarfyScene.h  TileMap2D.h  TileMap2DLoader.h
Assessment/TestProject/CodeDesign/: Assessment Task 1.docx  CodeDesign.sln
Assessment/TestProject/CodeDesign/Project1/: Critter.cpp  Critter.h  OldCritter.cpp  OldCritter.h  Project1.vcxproj  Project1.vcxproj.filters  Resource.h
Assessment/TestProject/CodeDesign/UnitTest1/: UnitTest1.cpp  UnitTest1.vcxproj  UnitTest1.vcxproj.filters
Assessment/raylib-2d-challenge-part-12/: Actor.cpp  Actor.h  CMakeLists.txt  CharacterActor.cpp  CommandListener.cpp  Common.h  DisplayOverlay.cpp  GameOverlay.cpp  GameOverlay.h  MainMenuScene.cpp  MainMenuScene.h  PhysicsContactHandler.cpp  PhysicsContactHandler.h  Readme.md  ResourceManager.h  Resources.txt  Scarfy.h  ScarfyScene.cpp  Scene.cpp  Scene.h  TextureAtlas.h  TileMap2DScene.cpp  TileMap2DScene.h  TrackingCamera2D.cpp
Assessment/raylib-2d-challenge-part-12/Data/: Ground.tsj  Scarfy.tiled-session
Assessment/raylib-2d-challenge-part-12/RawData/: star coin animation pack.txt
Assessment/raylib-2d-challenge-part-12/raylib-2d-challenge-part-12/: Collectable.cpp  Collectable.h  DrawPhysics.cpp  DrawPhysics.h  InputHandler.cpp  TileMap2D.cpp
Assessment/raylib-2d-challenge-part-12/raylib-2d-challenge-part-12/Data/: Environment Props.tsj  Level 1.tmj  level1.tiled-session
Assessment/raylib-2d-challenge-part-12/raylib-2d-challenge-part-12/Data/Collectables/: coin.rtpa
